2006-06-06  Thorsten Kukuk  <kukuk@thkukuk.de>

	* libpam/include/security/pam_malloc.h: Add missing license
	informations.

	* libpam/include/security/pam_ext.h: Add brackets for C++.
	* libpam/include/security/pam_modutil.h: Likewise.

	* libpam/include/security/pam_modules.h: Document where to
	find the copyright/license informations.

	* libpam/include/security/pam_appl.h: Move _pam_compat.h
	include inside of brackets.

2006-06-04  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_securetty/Makefile.am: Include Make.xml.rules.
	* modules/pam_securetty/pam_securetty.8.xml: New.
	* modules/pam_securetty/pam_securetty.8: Regenerated from xml file.
	* modules/pam_securetty/README.xml: New.
	* modules/pam_securetty/README: Regenerated from xml file.

	* modules/pam_rootok/Makefile.am: Include Make.xml.rules.
	* modules/pam_rootok/pam_rootok.8.xml: New.
	* modules/pam_rootok/pam_rootok.8: New, generated from xml file.
	* modules/pam_rootok/README.xml: New.
	* modules/pam_rootok/README: Regenerated from xml file.

	* modules/pam_permit/Makefile.am: Include Make.xml.rules.
	* modules/pam_permit/pam_permit.8.xml: New.
	* modules/pam_permit/pam_permit.8: New, generated from xml file.
	* modules/pam_permit/README.xml: New.
	* modules/pam_permit/README: Regenerated from xml file.

	* modules/pam_nologin/Makefile.am: Include Make.xml.rules.
	* modules/pam_nologin/pam_nologin.8.xml: New.
	* modules/pam_nologin/pam_nologin.8: Regenerated from xml file.
	* modules/pam_nologin/README.xml: New.
	* modules/pam_nologin/README: Regenerated from xml file.

2006-06-03  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_motd/Makefile.am: Include Make.xml.rules.
	* modules/pam_motd/pam_motd.8.xml: New.
	* modules/pam_motd/pam_motd.8: New, generated from xml file.
	* modules/pam_motd/README.xml: New.
	* modules/pam_motd/README: New, generated from xml file.

2006-06-02  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_mail/Makefile.am: Include Make.xml.rules.