@@ -1,0 +1,117 @@
+<?xml version="1.0" encoding='UTF-8'?>
+<!DOCTYPE refentry PUBLIC "-//OASIS//DTD DocBook XML V4.3//EN"
+	"http://www.oasis-open.org/docbook/xml/4.3/docbookx.dtd">
+
+<refentry id="pam_shells">
+
+  <refmeta>
+    <refentrytitle>pam_shells</refentrytitle>
+    <manvolnum>8</manvolnum>
+    <refmiscinfo class="sectdesc">Linux-PAM Manual</refmiscinfo>
+  </refmeta>
+
+  <refnamediv id="pam_shells-name">
+    <refname>pam_shells</refname>
+    <refpurpose>PAM module to check for valid login shell</refpurpose>
+  </refnamediv>
+
+  <refsynopsisdiv>
+    <cmdsynopsis id="pam_shells-cmdsynopsis">
+      <command>pam_shells.so</command>
+    </cmdsynopsis>
+  </refsynopsisdiv>
+
+  <refsect1 id="pam_shells-description">
+
+    <title>DESCRIPTION</title>
+
+    <para>
+      pam_shells is a PAM module that only allows access to the
+      system if the users shell is listed in <filename>/etc/shells</filename>.
+    </para>
+    <para>
+      It also checks if <filename>/etc/shells</filename> is a plain
+      file and not world writable.
+    </para>
+  </refsect1>
+
+  <refsect1 id="pam_shells-options">
+
+    <title>OPTIONS</title>
+    <para> This module does not recognice any options.</para>
+  </refsect1>
+
+  <refsect1 id="pam_shells-services">
+    <title>MODULE SERVICES PROVIDED</title>
+    <para>
+      The services <option>auth</option> and <option>account</option>
+      are supported.
+    </para>
+  </refsect1>
+
+  <refsect1 id='pam_shells-return_values'>
+    <title>RETURN VALUES</title>
+    <variablelist>
+      <varlistentry>
+        <term>PAM_AUTH_ERR</term>
+        <listitem>
+          <para>
+             Access to the system was denied.
+          </para>
+        </listitem>
+      </varlistentry>
+      <varlistentry>
+        <term>PAM_SUCCESS</term>
+        <listitem>
+          <para>
+            The users login shell was listed as valid shell in
+            <filename>/etc/shells</filename>.
+          </para>
+        </listitem>
+      </varlistentry>
+      <varlistentry>
+        <term>PAM_SERVICE_ERR</term>
+        <listitem>
+          <para>
+            The module was not able to get the name of the user.
+          </para>
+        </listitem>
+      </varlistentry>
+    </variablelist>
+     </refsect1>
+
+  <refsect1 id='pam_shells-examples'>
+    <title>EXAMPLES</title>
+    <para>
+      <programlisting>
+auth  required  pam_shells.so
+      </programlisting>
+    </para>
+  </refsect1>
+
+  <refsect1 id='pam_shells-see_also'>
+    <title>SEE ALSO</title>
+    <para>
+      <citerefentry>
+	<refentrytitle>shells</refentrytitle><manvolnum>5</manvolnum>
+      </citerefentry>,
+      <citerefentry>
+	<refentrytitle>pam.conf</refentrytitle><manvolnum>5</manvolnum>
+      </citerefentry>,
+      <citerefentry>
+	<refentrytitle>pam.d</refentrytitle><manvolnum>8</manvolnum>
+      </citerefentry>,
+      <citerefentry>
+	<refentrytitle>pam</refentrytitle><manvolnum>8</manvolnum>
+      </citerefentry>
+    </para>
+  </refsect1>
+
+  <refsect1 id='pam_shells-author'>
+    <title>AUTHOR</title>
+      <para>
+        pam_shells was written by Erik Troan &lt;ewt@redhat.com&gt;.
+      </para>
+  </refsect1>
+
+</refentry>
